# djangox-playground

./: .gitignore  pyproject.toml
accounts/migrations/: 0002_alter_customuser_id.py
config/: settings.py  urls.py
drills/: admin.py  models.py  tests.py  urls.py  views.py
drills/migrations/: 0001_initial.py  0002_pdf.py
templates/: _base.html  drill_create.html  drill_delete.html  drill_detail.html  drill_list.html  drill_upload.html
